syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message questComplete_toS {
    repeated int32 questID = 1;
}

message questComplete_toC {}